styles/Footer.module.css
.footer {
  padding: 2rem;
  display: flex;
  width: 100%;
  justify-content: space-around;
  gap: 2rem;
  max-width: 1400px;
  margin: 0 auto;
}
.footerLogo {
  align-self: center;
}

.logoContainer {
  position: relative;
  width: 207px;
  height: 103px;
  margin: 1rem auto 2rem;
}

.footer h3 {
  position: relative;
  margin-bottom: 2rem;
}

.footer h3::before {
  content: '';
  position: absolute;
  bottom: -20%;
  height: 4px;
  width: 60px;
  background-color: red;
  border-radius: 10px;
}

.copyright {
  font-size: 0.8rem;
  margin-block: 2rem;
  letter-spacing: 2px;
}

.listLinks {
  display: block;
  margin-block: 1rem;
  color: #626a7f;
  font-size: 16px;
}

.listLinks:hover {
  color: red;
}

.footerDescription {
  padding-block: 1rem;
  max-width: 200px;
  align-self: center;
}
.quickLinks,
.category {
  margin-top: 2rem;
}

@media screen and (max-width: 768px) {
  .footer {
    display: block;
    text-align: center;
  }

  .footerDescription {
    max-width: none;
  }
  .quickLinks,
  .category {
    display: block;
    width: 50%;
    margin: 0 auto;
    padding-top: 2rem;
  }
}

